feat: add interface to project
